property-line now used in index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
 
     <!-- Importing Web Component's Polyfill -->
     <script src="bower_components/platform/platform.js"></script>
+    <link rel="import" href="src/property-line.html">
     <link rel="import" href="src/statblock5e.html">
 </head>
 <body>
-    <stat-block></stat-block>
+  <stat-block>
+    <property-line>
+      <h4>Armor Class</h4>
+      <p>11 (hide armor)</p>
+    </property-line>
+    <property-line>
+      <h4>Hit Points</h4>
+      <p>178 (17d10 + 85)</p>
+    </property-line>
+  </stat-block>
 </body>
 </html>
