--- a/src/statblock5e.html
+++ b/src/statblock5e.html
@@ -6,18 +6,8 @@
       font-family: Helvetica, Arial, sans-serif;
       font-size: 14px;
     }
-
-    .prop-heading {
-      font-weight: bold;
-      color: #86220E;
-    }
   </style>
-  <property-line>
-    <h4>Armor Class</h4>
-    <p>11 (hide armor)</p>
-  </property-line>
-
-  <p>foobar</p>
+  <content select="property-line"></content>
 </template>
 
 <script>
