--- a/src/statblock5e.html
+++ b/src/statblock5e.html
@@ -8,6 +8,7 @@
     }
   </style>
   <content select="property-line"></content>
+  <content select="abilities-block"></content>
 </template>
 
 <script>
