statblock is now a 400px block

--- a/src/statblock5e.html
+++ b/src/statblock5e.html
@@ -5,6 +5,8 @@
     :host {
       font-family: Helvetica, Arial, sans-serif;
       font-size: 14px;
+      display: block;
+      width: 400px;
     }
   </style>
   <content select="property-line"></content>
