<tapered-rule> implemented

--- a/src/abilities-block.html
+++ b/src/abilities-block.html
@@ -1,3 +1,5 @@
+<link rel="import" href="tapered-rule.html">
+
 <template id="abilities-block">
   <style>
     :host {
@@ -14,6 +16,7 @@
       text-align: center;
     }
   </style>
+  <tapered-rule></tapered-rule>
   <table>
     <tr>
       <th>STR</th>
@@ -32,6 +35,7 @@
       <td id="cha"></td>
     </tr>
   </table>
+  <tapered-rule></tapered-rule>
 </template>
 
 <script>
