--- a/src/tapered-rule.html
+++ b/src/tapered-rule.html
@@ -1,9 +1,9 @@
 <template id="tapered-rule">
   <style>
     svg {
-      fill: #86220E;
+      fill: #922610;
       /* Stroke is necessary for good antialiasing in Chrome. */
-      stroke: #86220E;
+      stroke: #922610;
       margin-top: 11px;
       margin-bottom: 6px;
     }
