<creature-heading> implemented

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <!-- Web Components Polyfill -->
     <script src="bower_components/platform/platform.js"></script>
 
+    <link rel="import" href="src/creature-heading.html">
     <link rel="import" href="src/abilities-block.html">
     <link rel="import" href="src/property-line.html">
     <link rel="import" href="src/statblock5e.html">
 </head>
 <body>
   <stat-block>
+    <creature-heading>
+      <h1>Animated Armor</h1>
+      <h2>Medium construct, unaligned</h2>
+    </creature-heading>
     <property-line>
       <h4>Armor Class</h4>
       <p>18 (natural armor)</p>
