--- a/src/statblock5e.html
+++ b/src/statblock5e.html
@@ -9,6 +9,7 @@
       width: 400px;
     }
   </style>
+  <content select="creature-heading"></content>
   <content select="property-line"></content>
   <content select="abilities-block"></content>
 </template>
