Simplified statblock content node distribution

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       <h1>Animated Armor</h1>
       <h2>Medium construct, unaligned</h2>
     </creature-heading>
-    <property-line class="main-property">
+    <property-line>
       <h4>Armor Class</h4>
       <p>18 (natural armor)</p>
     </property-line>
-    <property-line class="main-property">
+    <property-line>
       <h4>Hit Points</h4>
       <p>33 (6d8 + 6)</p>
     </property-line>
-    <property-line class="main-property">
+    <property-line>
       <h4>Speed</h4>
       <p>25ft</p>
     </property-line>
@@ -37,24 +37,24 @@
                      data-wis="3"
                      data-cha="1"></abilities-block>
 
-    <property-line class="secondary-property">
+    <property-line>
       <h4>Damage Immunities</h4>
       <p>poison, psychic</p>
     </property-line>
-    <property-line class="secondary-property">
+    <property-line>
       <h4>Condition Immunities</h4>
       <p>blinded, charmed, deafened, exhaustion, frightened, paralyzed,
         petrified, poisoned</p>
     </property-line>
-    <property-line class="secondary-property">
+    <property-line>
       <h4>Senses</h4>
       <p>blindsight 60 ft. (blind beyond this radius), passive Perception 6</p>
     </property-line>
-    <property-line class="secondary-property">
+    <property-line>
       <h4>Languages</h4>
       <p>—</p>
     </property-line>
-    <property-line class="secondary-property">
+    <property-line>
       <h4>Challenge</h4>
       <p>1 (200 XP)</p>
     </property-line>
