--- a/src/statblock5e.html
+++ b/src/statblock5e.html
@@ -10,11 +10,7 @@
       width: 400px;
     }
   </style>
-  <content select="creature-heading"></content>
-  <content select=".main-property"></content>
-  <content select="abilities-block"></content>
-  <content select=".secondary-property"></content>
-  <tapered-rule></tapered-rule>
+  <content></content>
 </template>
 
 <script>
