Renamed statblock file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="import" href="src/creature-heading.html">
     <link rel="import" href="src/abilities-block.html">
     <link rel="import" href="src/property-line.html">
-    <link rel="import" href="src/statblock5e.html">
+    <link rel="import" href="src/stat-block.html">
 </head>
 <body>
   <stat-block>
