--- a/src/traits-block.html
+++ b/src/traits-block.html
@@ -1,18 +1,14 @@
-<template id="stat-block">
-  <style>
-    :host {
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      display: block;
-      width: 400px;
-    }
-  </style>
+<link rel="import" href="tapered-rule.html">
+
+<template id="traits-block">
+  <style></style>
+  <tapered-rule></tapered-rule>
   <content></content>
 </template>
 
 <script>
 (function(window, document) {
-  var elemName = 'stat-block';
+  var elemName = 'traits-block';
   var thatDoc = document;
   var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
@@ -27,3 +23,4 @@
   thatDoc.registerElement(elemName, {prototype: proto});
 })(window, document);
 </script>
+
