"+0" instead of "0" for ability modifier

--- a/src/abilities-block.html
+++ b/src/abilities-block.html
@@ -46,7 +46,7 @@
   }
 
   function formattedModifier(abilityModifier) {
-    if (abilityModifier > 0) {
+    if (abilityModifier >= 0) {
       return '+' + abilityModifier;
     }
     return String(abilityModifier);
