Now using Noto Sans.
This required changing some margins/font sizes etc.

--- a/src/abilities-block.html
+++ b/src/abilities-block.html
@@ -49,7 +49,9 @@
     if (abilityModifier >= 0) {
       return '+' + abilityModifier;
     }
-    return String(abilityModifier);
+    // This is an en dash, NOT a "normal" dash. The minus sign needs to be more
+    // visible.
+    return '–' + Math.abs(abilityModifier);
   }
 
   function abilityText(abilityScore) {
