--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -1,8 +1,10 @@
+<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic'
+      rel='stylesheet' type='text/css'>
 <template id="stat-block">
   <style>
     :host {
-      font-family: Helvetica, Arial, sans-serif;
-      font-size: 14px;
+      font-family: 'Noto Sans', sans-serif;
+      font-size: 13px;
       display: block;
       width: 400px;
     }
