--- a/src/tapered-rule.html
+++ b/src/tapered-rule.html
@@ -4,8 +4,8 @@
       fill: #922610;
       /* Stroke is necessary for good antialiasing in Chrome. */
       stroke: #922610;
-      margin-top: 10px;
-      margin-bottom: 5px;
+      margin-top: 0.7em;
+      margin-bottom: 0.35em;
     }
   </style>
   <svg height="5" width="400">
