Reworked the element hierachy + actions heading

--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -1,4 +1,3 @@
-<link rel="import" href="tapered-rule.html">
 <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
 
 <template id="creature-heading">
@@ -8,6 +7,7 @@
       color: #7A200D;
       font-weight: 700;
       margin: 0;
+      margin-bottom: -2px;
       font-size: 25px;
       letter-spacing: 2px;
     }
@@ -21,7 +21,6 @@
   </style>
   <content select="h1"></content>
   <content select="h2"></content>
-  <tapered-rule></tapered-rule>
 </template>
 
 <script>
