--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -8,6 +8,14 @@
       display: block;
       width: 400px;
     }
+
+    ::content > h3 {
+      color: #7A200D;
+      font-weight: normal;
+      margin: 0;
+      font-size: 18px;
+      border-bottom: 1px solid #7A200D;
+    }
   </style>
   <content></content>
 </template>
