--- a/src/top-stats.html
+++ b/src/top-stats.html
@@ -1,14 +1,14 @@
 <link rel="import" href="tapered-rule.html">
 
-<template id="traits-block">
-  <style></style>
+<template id="top-stats">
   <tapered-rule></tapered-rule>
   <content></content>
+  <tapered-rule></tapered-rule>
 </template>
 
 <script>
 (function(window, document) {
-  var elemName = 'traits-block';
+  var elemName = 'top-stats';
   var thatDoc = document;
   var thisDoc = (thatDoc.currentScript || thatDoc._currentScript).ownerDocument;
   var proto = Object.create(HTMLElement.prototype, {
