Outer block design should be done

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </property-line>
 
       <abilities-block data-str="14"
-                      data-dex="11"
-                      data-con="13"
-                      data-int="1"
-                      data-wis="3"
-                      data-cha="1"></abilities-block>
+                       data-dex="11"
+                       data-con="13"
+                       data-int="1"
+                       data-wis="3"
+                       data-cha="1"></abilities-block>
 
       <property-line>
         <h4>Damage Immunities</h4>
@@ -67,9 +67,9 @@
     <property-block>
       <h4>Antimagic Susceptibility.</h4>
       <p>The armor is incapacitated while in the area of an <i>antimagic
-          field</i>.  If targeted by <i>dispel magic</i>, the armor must
-        succeed on a Constitution saving throw against the caster’s spell save
-        DC or fall unconscious for 1 minute.</p>
+        field</i>.  If targeted by <i>dispel magic</i>, the armor must succeed
+        on a Constitution saving throw against the caster’s spell save DC or
+        fall unconscious for 1 minute.</p>
     </property-block>
     <property-block>
       <h4>False Appearance.</h4>
@@ -89,7 +89,6 @@
       <p><i>Melee Weapon Attack:</i> +4 to hit, reach 5 ft., one target.
         <i>Hit:</i> 5 (1d6 + 2) bludgeoning damage.</p>
     </property-block>
-
   </stat-block>
 </body>
 </html>
