Fixing issues with too much whitespace

--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -33,6 +33,11 @@
       border-bottom: 1px solid #7A200D;
     }
 
+    /* Last block shouldn't have margin, too much white space. */
+    ::content property-block:last-child /deep/ p {
+      margin-bottom: 0;
+    }
+
     .bar {
       height: 5px;
       background: #E69A28;
