--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -6,7 +6,7 @@
       font-family: 'Lora', serif;
       color: #7A200D;
       font-weight: 700;
-      margin: 0;
+      margin-top: -6px;
       margin-bottom: -2px;
       font-size: 25px;
       letter-spacing: 2px;
