--- a/src/property-line.html
+++ b/src/property-line.html
@@ -4,6 +4,12 @@
       color: #7A200D;
     }
 
+    div {
+      /* Indenting everything EXCEPT the first line. */
+      text-indent: -1em;
+      margin-left: 1em;
+    }
+
     ::content > h4 {
       font-weight: bold;
       display: inline;
