Small-caps for creature name & heading.
It's fake small caps, but it's the best we have.

--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -26,11 +26,13 @@
     }
 
     ::content > h3 {
-      color: #7A200D;
-      font-weight: normal;
-      margin: 0;
-      font-size: 18px;
       border-bottom: 1px solid #7A200D;
+      color: #7A200D;
+      font-size: 18px;
+      font-variant: small-caps;
+      font-weight: normal;
+      letter-spacing: 1px;
+      margin: 0;
     }
 
     /* Last block shouldn't have margin, too much white space. */
