--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -10,6 +10,7 @@
       margin-bottom: -2px;
       font-size: 25px;
       letter-spacing: 2px;
+      font-variant: small-caps;
     }
 
     ::content > h2 {
