Using normalize.css

--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,15 @@
     <link rel="import" href="src/property-block.html">
     <link rel="import" href="src/property-line.html">
     <link rel="import" href="src/stat-block.html">
+
+    <style>
+      stat-block {
+        /* A bit of margin for presentation purposes, to show off the drop
+        shadow. */
+        margin-left: 20px;
+        margin-top: 20px;
+      }
+    </style>
 </head>
 <body>
   <stat-block>
