--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -1,3 +1,5 @@
+<link href='/bower_components/normalize/normalize.css'
+      rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic'
       rel='stylesheet' type='text/css'>
 <template id="stat-block">
