Removed normalize.css

--- a/demo-inlined.html
+++ b/demo-inlined.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html><head><link href="http://fonts.googleapis.com/css?family=Lora:700" rel="stylesheet" type="text/css"/><link href="/bower_components/normalize/normalize.css" rel="stylesheet" type="text/css"/><link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/><meta charset="utf-8"/><title>Statblock example</title><style>
+<html><head><link href="http://fonts.googleapis.com/css?family=Lora:700" rel="stylesheet" type="text/css"/><link href="http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic" rel="stylesheet" type="text/css"/><meta charset="utf-8"/><title>Statblock example</title><style>
+      body {
+        margin: 0;
+      }
+
       stat-block {
         /* A bit of margin for presentation purposes, to show off the drop
         shadow. */
