--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,10 @@
     <link rel="import" href="src/stat-block.html">
 
     <style>
+      body {
+        margin: 0;
+      }
+
       stat-block {
         /* A bit of margin for presentation purposes, to show off the drop
         shadow. */
