--- a/src/property-line.html
+++ b/src/property-line.html
@@ -10,17 +10,15 @@
       margin-left: 1em;
     }
 
-    ::content > h4 {
-      font-weight: bold;
+    ::content > * {
       display: inline;
     }
 
     ::content > p {
-      display: inline;
       margin-left: 5px;
     }
   </style>
-  <div><content select="h4"></content><content select="p"></content></div>
+  <div><content></content></div>
 </template>
 
 <script>
