em instead of px for the margin

--- a/src/property-line.html
+++ b/src/property-line.html
@@ -15,7 +15,7 @@
     }
 
     ::content > p {
-      margin-left: 5px;
+      margin-left: 0.4em;
     }
   </style>
   <!-- Specific select expressions needed instead of just one <content>
