--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@ almost exactly like the statblocks from the 5th edition D&amp;D Monster Manual.<
 Components</a> specs: <a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a>, <a href="http://w3c.github.io/webcomponents/spec/custom/">Custom
 Elements</a>, <a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a> and the HTML5 <a href="https://html.spec.whatwg.org/multipage/scripting.html#the-template-element">template</a>
 element.</p><p>Since Chrome is <a href="http://jonrimmer.github.io/are-we-componentized-yet/">currently the only browser</a> that implements all of
-the above specs, statblock5e only works in Chrome. (Firefox is close to providing
-all the necessary support but it's all behind flags.)</p><p><strong>There are <em>no</em> dependencies</strong> (JavaScript or otherwise), <strong>this is entirely
+the above specs, <strong>statblock5e only works in Chrome.</strong> (Firefox is close to
+providing all the necessary support but it's all behind flags.)</p><div align="center">
+  <p><a href="http://valloric.github.io/statblock5e/demo.html">
+     <b>LIVE DEMO</b></a>
+  </p>
+</div><p><strong>There are <em>no</em> dependencies</strong> (JavaScript or otherwise), <strong>this is entirely
 self-contained</strong>.</p><p>There's very little JavaScript actually; just a bit of boilerplate that
 registers the elements and some minor logic for computing the ability modifiers
 for the ability table. Other than that, it's pure HTML, CSS &amp; SVG.</p><p>Here's the markup that produced the above picture. <strong>No user-level CSS or
