Update from master

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="outer" id="main_content_wrap">
       <section class="inner" id="main_content"><h1>A Web Component statblock for D&amp;D 5E</h1><p>Statblock5e provides an easy way to display a creature statblock that looks
 almost exactly like the statblocks from the 5th edition D&amp;D Monster Manual.</p><div align="center">
-  <img src="http://i.imgur.com/qxI9G6n.png"/>
+  <img src="http://i.imgur.com/K2fcFz0.png"/>
 </div><p>This is implemented as a set of custom elements following the <a href="http://webcomponents.org/">Web
 Components</a> specs: <a href="http://w3c.github.io/webcomponents/spec/imports/">HTML Imports</a>, <a href="http://w3c.github.io/webcomponents/spec/custom/">Custom
 Elements</a>, <a href="http://w3c.github.io/webcomponents/spec/shadow/">Shadow DOM</a> and the HTML5 <a href="https://html.spec.whatwg.org/multipage/scripting.html#the-template-element">template</a>
