Font stacks for typeface fallback.

--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -1,9 +1,12 @@
-<link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Lora:700'
+      rel='stylesheet' type='text/css'>
 
 <template id="creature-heading">
   <style>
     ::content > h1 {
-      font-family: 'Lora', serif;
+      font-family: 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman,
+                    'Goudy Old Style', Garamond, 'Hoefler Text',
+                    'Bitstream Charter', Georgia, serif;
       color: #7A200D;
       font-weight: 700;
       margin-top: -6px;
