--- a/src/stat-block.html
+++ b/src/stat-block.html
@@ -8,7 +8,8 @@
     }
 
     #content-wrap {
-      font-family: 'Noto Sans', sans-serif;
+      font-family: 'Noto Sans', 'Myriad Pro', Calibri, Helvetica, Arial,
+                    sans-serif;
       font-size: 13px;
       display: block;
       background: #FDF1DC;
