--- a/src/creature-heading.html
+++ b/src/creature-heading.html
@@ -1,18 +1,19 @@
-<link href='http://fonts.googleapis.com/css?family=Lora:700'
+<link href='https://fonts.googleapis.com/css?family=Libre+Baskerville:700'
       rel='stylesheet' type='text/css'>
 
 <template id="creature-heading">
   <style>
     ::content > h1 {
-      font-family: 'Lora', 'Calisto MT', 'Bookman Old Style', Bookman,
-                    'Goudy Old Style', Garamond, 'Hoefler Text',
-                    'Bitstream Charter', Georgia, serif;
+      font-family: 'Libre Baskerville', 'Lora', 'Calisto MT',
+                   'Bookman Old Style', Bookman, 'Goudy Old Style',
+                   Garamond, 'Hoefler Text', 'Bitstream Charter',
+                   Georgia, serif;
       color: #7A200D;
       font-weight: 700;
-      margin-top: -6px;
-      margin-bottom: -2px;
-      font-size: 25px;
-      letter-spacing: 2px;
+      margin-top: -3px;
+      margin-bottom: 0px;
+      font-size: 23px;
+      letter-spacing: 1px;
       font-variant: small-caps;
     }
 
