Increasing line height
MM has more line height than what we had before. I think we're closer
now.

--- a/src/property-line.html
+++ b/src/property-line.html
@@ -8,6 +8,7 @@
       /* Indenting everything EXCEPT the first line. */
       text-indent: -1em;
       margin-left: 1em;
+      line-height: 1.4;
     }
 
     ::content > * {
