--- a/src/property-block.html
+++ b/src/property-block.html
@@ -13,6 +13,7 @@
     p {
       margin-top: 0.3em;
       margin-bottom: 0.9em;
+      line-height: 1.5;
     }
   </style>
   <p><content></content></p>
